	  2.6.18-194.3.1.0.1.el5 (OEL 5)
	* Client support for unpatched kernels:
	  (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	  2.6.16 - 2.6.30 vanilla (kernel.org)
	* Recommended e2fsprogs version: 1.41.10-sun2
	* The async journal commit feature (bug 19128) and the cancel
	  lock before replay feature (bug 16774) are disabled by default.

Severity   : normal
Bugzilla   : 21760
Description: apps stuck in ptlrpc_check_set() during direct I/O
Details    : start async bulk unregistering at the same time at reply unlink

Severity   : normal
Bugzilla   : 23352
Description: Modified value of at_min is not taken into account

-------------------------------------------------------------------------------

2010-10-29 Oracle, Inc.
	* version 1.8.5
	* Support for kernels:
	  2.6.16.60-0.69.1 (SLES 10),
	  2.6.32.19-0.2.1 (SLES11),
	  2.6.18-194.17.1.el5 (RHEL 5)
	  2.6.18-194.17.1.0.1.el5 (OEL 5)
	* Client support for unpatched kernels:
	  (see http://wiki.lustre.org/index.php?title=Patchless_Client)
	  2.6.16 - 2.6.32 vanilla (kernel.org)
	* Recommended e2fsprogs version: 1.41.10-sun2
	* The async journal commit feature (bug 19128) and the cancel
	  lock before replay feature (bug 16774) are disabled by default.

Severity   : normal
Bugzilla   : 23766
Description: atime is not properly updated on an MDS

Severity   : enhancement
Bugzilla   : 22514
Description: Update to RHEL5.5 kernel 2.6.19-194.17.1.el5.
	     Update to OEL5.5  kernel 2.6.19-194.17.1.0.1.el5.

Severity   : enhancement
Bugzilla   : 20744
Description: Update to SLES10 SP3 kernel 2.6.16.60-0.69.1.

Severity   : normal
Frequency  : only with SLES10
Bugzilla   : 20744
Description: Use OFED "KMP" provided by Novell
Details    : SLES10 SP3 ships with OFED in a separate "KMP" package.
	     Lustre is now built against this package. That means you need to
	     install the ofed-kmp package from Novell for the patchless client
	     and from our download site for the server. Note that the ofed-kmp