@@ -13,6 +13,12 @@ xxxx-xx-xx Oracle, Inc.
 	  lock before replay feature (bug 16774) are disabled by default.
 
 Severity   : normal
+Bugzilla   : 21804
+Description: release request ref through ptlrpc_server_drop_request()
+Details    : make sure the request is protected by rq_refcount while
+             being processed in ptlrpc_server_handle_req_in().
+
+Severity   : normal
 Bugzilla   : 21760
 Description: apps stuck in ptlrpc_check_set() during direct I/O
 Details    : start async bulk unregistering at the same time at reply unlink
